--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage":"https://Marat.2000.github.io/react-bookshop",
-  "name": "todo",
+  "name": "bookshop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
